# CKModInstaller

./: Cargo.toml  mods.json
src/: download.rs  main.rs
