[package]
name = "ck_mod_installer"
version = "0.1.0"
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
iced = "0.3"
iced_futures = "0.3"
iced_native = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
unzip = "0.1.0"